# easy_vfio

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
examples/: example_basic.c
include/: easy_vfio.h  isml_vfio.h  vfio_internal.h
src/: container.c  device.c  dma.c  easy_vfio.c  easy_vfio_ctx.c  easy_vfio_internal.h  group.c  interrupt.c  isml_vfio.c  pci_config.c  region.c  utils.c  vfio_ctx.c  vfio_internal_bar.c  vfio_internal_container.c  vfio_internal_device.c  vfio_internal_dma.c  vfio_internal_group.c  vfio_internal_interrupt.c  vfio_internal_iommufd.c  vfio_internal_pci_config.c  vfio_internal_region.c  vfio_internal_utils.c
tests/: test_easy_vfio.c
